// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/index.tsx should render correct LIST_HEIGHT 200rpx 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 4,
      "props": Object {
        "style": "height:200rpx;",
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 3,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`src/index.tsx should render correctly in platform ali 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 1,
      "props": Object {
        "style": "height:0rpx;",
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`src/index.tsx should render correctly in platform toutiao 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 3,
      "props": Object {
        "style": "height:0rpx;",
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 2,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`src/index.tsx should render correctly in platform wechat 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 2,
      "props": Object {
        "lowerThreshold": 50,
        "onScroll": "$$REMAX_METHOD_2_onScroll",
        "scrollTop": undefined,
        "style": "height:0rpx;",
        "upperThreshold": 50,
      },
      "text": undefined,
      "type": "scroll-view",
    },
  ],
  "id": 1,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
